cambio ico & footer

--- a/templates/tienda.html
+++ b/templates/tienda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="novedades,información,actualización,futsal">
     <meta name="description" content="Novedades por medio de imagenes, video,  texto y link hacia otros sitios web">
-    <link rel="shortcut icon" href="../img/LaFavoritafavicon.ico" type="image/x-icon">
+    <link rel= "icon" href="../img/escudo.ico">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <title>Tienda</title>
@@ -53,12 +53,12 @@
     <footer>
         <div class="columna-1">
             <img src="../img/berzuini.png" alt="Logo personal" style="width: 10vw;">
-            <h5>© 2023 Todos los derechos reservados.</h5>
+            <h5>© 2024 Grupo 16 Todos los derechos reservados.</h5>
             <h5>Curso Full Stack Python</h5>
         </div>
         <div class="columna-2">
             <div>
-                <a class="hipervinculo"  href="https://instagram.com/futsal_femenino_capital?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="../img/instagram.png" alt="Instagram" style="width: 2vw;">@FUTSAL_FEMENINO_CAPITAL</a>
+                <a class="hipervinculo"  href="https://instagram.com/futsal_femenino_capital?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="../img/Instagram-frame-png.png" alt="Instagram" style="width: 2vw;">@FUTSAL_FEMENINO_CAPITAL</a>
             </div>
 
             <div>
@@ -66,7 +66,7 @@
             </div>
 
             <div>
-                <a class="hipervinculo"  href="https://www.youtube.com/@g5-lafavorita232" target="_blank"><img src="../img/youtube.png" alt="YouTube" style="width: 2vw;">G5 - LA FAVORITA</a>
+                <a class="hipervinculo"  href="https://www.youtube.com/@g5-lafavorita232" target="_blank"><img src="../img/youtube.jpg" alt="YouTube" style="width: 2vw;">G5 - LA FAVORITA</a>
             </div>  
         </div>
    </footer>
