pequeña tienda y modificaciones varias

--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -36,8 +36,8 @@
         <!--Sección 1 Animación de imágenes-->
         <section class="seccion1"></section>
 
-        <!--Seccion 2 Transformación de imagenes-->
-        <section>
+        <!--Seccion 2 Transformación de imagenes
+       /* <section>
             <h1>Categorías Formativas</h1>
             <p>Fotografías de las jugadoras y jugadores de las categorías más pequeñas.</p>
             <div class="contenedorformativas">
@@ -59,22 +59,22 @@
                 <img src="../img/formativa16.jpg" alt="Categoría Formativa">
                 <img src="../img/formativa17.jpg" alt="Categoría Formativa">
             </div>   
-        </section>
+        </section>-->
 
         <section>
             <h1>Primera División</h1>
             <p>Algunas fotos de las chicas de primera</p>
             <div class="contenedorprimera">
-                <img src="../img/primera1.jpg" alt="Primera División">
-                <img src="../img/primera2.jpg" alt="Primera División">
-                <img src="../img/primera3.jpg" alt="Primera División">
-                <img src="../img/primera4.jpg" alt="Primera División">
-                <img src="../img/primera5.jpg" alt="Primera División">
-                <img src="../img/primera6.jpg" alt="Primera División">
-                <img src="../img/primera7.jpg" alt="Primera División">
-                <img src="../img/primera8.jpg" alt="Primera División">
-                <img src="../img/primera9.jpg" alt="Primera División">
-                <img src="../img/primera10.jpg" alt="Primera División">
+                <img src="../img/anterior1.jpg" alt="Primera División">
+                <img src="../img/anterior2.jpg" alt="Primera División">
+                <img src="../img/anterior3.jpg" alt="Primera División">
+                <img src="../img/anterior4.jpg" alt="Primera División">
+                <img src="../img/anterior5.jpg" alt="Primera División">
+                <img src="../img/anterior6.jpg" alt="Primera División">
+                <img src="../img/anterior7.jpg" alt="Primera División">
+                <img src="../img/anterior8.jpg" alt="Primera División">
+                <img src="../img/anterior9.jpg" alt="Primera División">
+                <img src="../img/anterior10.jpg" alt="Primera División">
             </div>
         </section>
 
@@ -90,7 +90,7 @@
                 <img src="../img/Cancha4.jpg" alt="Inauguración cancha 2021">
                 <img src="../img/Cancha6.jpg" alt="Inauguración cancha 2021">
                 <img src="../img/Cancha7.jpg" alt="Inauguración cancha 2021">
-            </div>-->
+            </div>
         </section>
                 <br>
                 <br>
@@ -100,7 +100,7 @@
                 <br>
             <div>
                 <a href="../img/Equipo.jpg" target="_blank">Ver imagen</a>
-                <div><!-- ver con css -->
+                <div> ver con css 
                 <a href="../img/Equipo2.jpg" download="">Descargar imagen</a>
             </div>
             <div>
@@ -125,7 +125,7 @@
         </section>
     </main>
 
-    <!--Pie de página-->
+    Pie de página-->
     <footer>
         <div class="columna-1">
             <img src="../img/berzuini.png" alt="Logo personal" style="width: 10vw;">
