--- a/templates/novedades.html
+++ b/templates/novedades.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Novedades por medio de imagenes, video,  texto y link hacia otros sitios web">
     <link rel= "icon" href="../img/escudo.ico">
     <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/footer.css">
     <title>Novedades</title>
 </head>
@@ -16,7 +17,7 @@
      <!--Encabezado-->
     <header>
         <!--Logo-->
-        <div class="header-linea">
+        <div>
             <video class="logo" src="../video/logoanimado.mp4" autoplay muted></video>
         </div>
         <!--Menú de navegación-->
@@ -33,57 +34,58 @@
 
     <main>
         <section>
+            <br><br><br><br><br>
             <div>
                 <h1>Últimas novedades</h1>
                 <h2>Inicio de las actividades de apoyo a las trayectorias educativas de las jugadoras
                 </h2>
             </div>
-            <div>
-                <img src="../img/Jugadoras.jpg" alt="Jugadoras">
-            </div>
+            
         </section>
        
         <section>
+            <br><br>
             <p>Desde el cuerpo técnico informamos que aquellas jugadoras que necesiten apoyo escolar de algún espacio curricular o asignatura tanto del nivel primario o secundario se comunique con la delegada o técnico de su categoría para coordinar con las responsables.<br>¡No pierdas te pierdas está oportunidad para ponerte al día con las actividades del colegio!
             </p>
         </section>
-
+<br><br>
         <section>
             <h2>La Favorita cuenta con dos nuevos espacios deportivos</h2>
             <p>Se trata de un nuevo sitio para los chicos de la Escuela de Fútbol Infantil del barrio 31 de Mayo y una cancha en el Gimnasio Nº5.</p>
             <a href="https://www.mendovoz.com/ciudad/2021/11/17/la-favorita-cuenta-con-dos-nuevos-espacios-deportivos-107361.html" class="news-link" data-title="Título de la Noticia">Leer noticia</a>
         </section>
 
+<br><br>
+
         <section>
             <h2>La Favorita, las primeras en Mendoza</h2>
             <p>MENDOZA.- Es el primer equipo femenino que participa en el certamen de las formativas masculinas.</p>
             <a href="https://www.futsalushuaia.com/archivo/337/la-favorita-las-primeras-en-mendoza/" class="news-link" data-title="Título de la Noticia">Leer noticia</a>
         </section>
-
+<br><br>
         <section>
             <h2>Inclusión como bandera</h2>
             <p>Las chicas de La Favorita son unas luchadoras que día a día le ganan un partido a las limitaciones.</p>
             <a href="https://www.losandes.com.ar/inclusion-como-bandera/" class="news-link" data-title="Título de la Noticia">Leer noticia</a>
         </section>
-
+<br><br>
         <section>
             <h2>La Favorita, el único club netamente femenino, en el futsal de Mendoza</h2>
             <p>El equipo de La Favorita es único club femenino que está jugando en los torneos de Fefusa en la actualidad y que tiene la particularidad que está formado por todas chicas del barrio.</p>
             <a href="https://www.diariouno.com.ar/ovacion/futsal/favorita-unico-club-netamente-femenino-futsal-mendoza-03082019_rk7oA8lPV" class="news-link" data-title="Título de la Noticia">Leer noticia</a>
         </section>
-
+<br><br>
         <section>
             <h2>El equipo de futsal femenino de La Favorita sigue creciendo y formando jugadoras que llegan a primera</h2>
             <p>Las mujeres son preparadas en el Gimnasio Municipal Nº5 con un equipo técnico y académico que las acompaña en su trayectoria. Inscripciones y más info en esta nota.</p>
             <a href="https://ciudaddemendoza.gob.ar/2022/05/02/el-equipo-de-futsal-femenino-de-la-favorita-sigue-creciendo-y-formando-jugadoras-que-llegan-a-primera%EF%BF%BC/" class="news-link" data-title="Título de la Noticia">Leer noticia</a>
         </section>
-
+<br><br>
         <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/DZMbPsngUzU?si=UZO00VUxfBqcxyLP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/tjd7_EDnvUA?si=JfqgtmQ0mv1WefL3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/djGWsND13IQ?si=6ruqOh6QmOEht7qo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cp1OTPBp4aY?si=r0HcWac2M9yAd00V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/75IfuZpsfBA?si=D9gBFtwlEyX55E0y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7Fw8nYt8wqY?si=UxyKCWLkz4ElMwxt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        
         </section>
 
         <br>
