--- a/templates/tienda.html
+++ b/templates/tienda.html
@@ -9,6 +9,8 @@
     <link rel= "icon" href="../img/escudo.ico">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/tienda.css">
     <title>Tienda</title>
 </head>
 
@@ -32,7 +34,24 @@
     </header>
 
     <main>
-        <section>
+<br><br><br><br><br>
+        <h2>Productos</h2>
+
+        <div class="producto">
+          <img src="../img/imagen_producto1.jpg" alt="Producto 1">
+          <h3>Producto 1</h3>
+          <p>Precio: $19.99</p>
+          <button>Agregar al carrito</button>
+        </div>
+      
+        <div class="producto">
+          <img src="../img/imagen_producto2.jpg" alt="Producto 2">
+          <h3>Producto 2</h3>
+          <p>Precio: $29.99</p>
+          <button>Agregar al carrito</button>
+        </div>
+      
+        <!--<section>
             <div>
                 <h1>Futsal Femenino Capital</h1>
                 <h3>Gimnasio Municipal N°5 - La Favorita</h3>
@@ -47,7 +66,7 @@
         </section>
        
         
-    </main>
+    </main>-->
 
     <!--Pie de página-->
     <footer>
