--- a/css/galeria.css
+++ b/css/galeria.css
@@ -5,7 +5,16 @@
     padding: 0%;
     font-family:"Lato"
 }
+h1{
+    text-align: center;
 
+}
+p{
+    text-align: center;
+}
+h6{
+    text-align: center;
+}
 /*Estilo secciones*/
     /*Sección 1*/
 .seccion1 {
