--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -68,10 +68,17 @@
     
     
         </div>
+        
+         <h3>Nuevos Socios</h3>
+           <article id="Persona">
+            <img id="Foto" src="" alt="">
+            <h4 id="Titulo" >Bienvenidxs <span id="Nombre"></span></h4>
+        </article>
+
+        <script src="../JS/contacto.js"></script>
        
        
-       
-       
+    </main>  
        
        
        
