--- a/templates/novedades.html
+++ b/templates/novedades.html
@@ -28,6 +28,7 @@
             <a class="menu" href="tienda.html">TIENDA</a>
             <a class="menu" href="descargas.html">DESCARGAS</a>
             <a class="menu" href="contacto.html">CONTACTO</a>
+            <a class="menu" href="Campamento.html">CAMPAMENTO</a>
             <a class="menu" href="https://www.fefusamendoza.com.ar/" target="_blank">FEFUSA</a>
         </nav>
     </header>
