--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -77,7 +77,23 @@
 
         <script src="../JS/contacto.js"></script>
        
-       
+        <h5> Agregar Socio</h5>
+        
+           <form id="userForm">         
+              <label for="username">Nombre y Apellido</label>
+              <input 
+                type="text"
+                name="username"
+                required
+               />
+
+               <button>Guardar</button>
+
+            </form>
+
+            <ul id="userList">
+               <li>item</li>
+            </ul>
     </main>  
        
        
